--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,10 +13,39 @@
  *= require_tree .
  *= require_self
  */
- 
  @import "bootstrap";
 // @import "font-awesome";
+/*@import url('../fonts/Cardo-Bold.ttf');
+@import url('../fonts/Cardo-Italic.ttf?family=Cardo:ital@1&family=Outfit:wght@300&display=swap');
+@import url('../fonts/Cardo-Regular.ttf');*/
+
+@import url('https://fonts.googleapis.com/css2?family=Cardo:ital@1&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Cardo&display=swap');
+ 
+@import url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@300&display=swap');
+
+$prim: #7C3AED;
 
 .container{
     padding-top: 30px;
+}
+
+section{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $prim;
+    font-family: 'Rokkitt', serif;
+    font-size: large;
+    padding-left: 45px;
+    padding-right: 45px;
+    
+}
+
+h1,h2{
+    font-family: 'Cardo', serif;
+}
+h3{
+    font-family: 'Rokkitt', serif;
 }
