More styles correction

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,3 +53,18 @@ body{
     font-family: 'Rokkitt', serif;
 
 }
+
+.card{
+    font-family: sans-serif;
+    .card-header{
+        font-size: larger;
+        background-color: white;
+        border: 0px;        
+    }
+    .card-body{
+        
+    }
+    .card-footer{
+        background-color: #fafafa;
+    }
+}
